# foreign_configuration_solutions

./: .gitmodules  CMakeLists.txt  README.md
